<resources>
    <string name="app_name">My Chat</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <!-- Strings related to signup -->
    <string name="empty_password">Please input password!</string>
    <string name="wrong_repeat_password">Two passwords don\'t match!</string>
    <string name="too_short_password">Password must be at least 6 numbers/characters!</string>
    <string name="signup_success">Your account has been created successfully!</string>
    <string name="set_friend_name">Please set your friend\'s nickname:</string>
    <string name="signup_title">Sign Up</string>
    <string name="please_input_password">Please input password.</string>
    <string name="please_confirm_password">Please confirm password.</string>
    <string name="sign_up">Sign Up</string>

    <!-- Strings related to settings -->
    <string name="color_friend_msg_option_label_default">Default</string>
    <string name="color_friend_msg_option_label_green">Green</string>
    <string name="color_friend_msg_option_label_blue">Blue</string>
    <string name="color_friend_msg_option_label_red">Red</string>
    <string name="color_friend_msg_option_label_bluegrey">Blue Grey</string>

    <string name="color_friend_msg_option_value_default">default</string>
    <string name="color_friend_msg_option_value_green">green</string>
    <string name="color_friend_msg_option_value_blue">blue</string>
    <string name="color_friend_msg_option_value_red">red</string>
    <string name="color_friend_msg_option_value_bluegrey">blue_grey</string>

    <string name="color_friend_msg_label">Message Color</string>
    <string name="color_friend_msg_key">message_color</string>

    <string name="settings_menu">Settings</string>

    <!-- Strings related to chat box -->
    <string name="chat_box_menu_change_name_item">Change Name</string>
    <string name="send_button_label">Send</string>
    <string name="show_profile">Show Profile</string>

    <!-- Strings related to SharedPreference -->
    <string name="pref_my_private_key">my_private_key</string>
    <string name="pref_my_public_key">my_public_key</string>
    <string name="pref_my_user_id">myUserId</string>
    <string name="pref_my_chat_token">chat_token</string>

    <!--Strings realted to notification-->
    <string name="msg_received_notification_channel_name">New messages</string>

    <!--Strings realted to contact list-->
    <string name="contacts_title">Contacts</string>

    <string name="profile_qrcode">profile_qrcode</string>
    <string name="copy_profile">Copy Profile</string>
    <string name="scan_qrcode">Scan QRcode</string>
    <string name="delete_data">Delete Data</string>
    <string name="qrcode_imageview">qrcode_imageView</string>
    <string name="please_input_your_friend_s_name">Please input your friend\'s name</string>
    <string name="ok">OK</string>
    <string name="input_your_friend_s_public_key_here">Input profile here.</string>
    <string name="invalid_profile">The profile input is invalid.</string>


</resources>
