<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings_contacts_menu_item"
        android:title="@string/settings_menu"
        app:showAsAction="never" />

    <item android:id="@+id/show_profile_contacts_menu_item"
        android:title="@string/show_profile"
        app:showAsAction="never"/>

    <item android:id="@+id/copy_profile_contacts_menu_item"
        android:title="@string/copy_profile"
        app:showAsAction="never"/>

    <item android:id="@+id/add_contact_contacts_menu_item"
        android:title="@string/scan_qrcode"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_input_add"/>

    <item android:id="@+id/delete_data_contacts_menu_item"
        android:title="@string/delete_data"
        app:showAsAction="never"/>


</menu>